# goa-projects

./: .goarc  LICENSE  README  goarc
apps/goa_testbed/: dnsmasq.conf  goarc
apps/system_info/: goarc  used_apis
apps/unix_shell/: README  dnsmasq.conf  goarc
examples/lvgl/: goarc
examples/vfs_tap/: README  artifacts  goarc  used_apis
firefox-av@vbox5/raw/: init.config  machine.vbox
firefox-av@vbox6/raw/: init.config  machine.vbox6
lomiri/: goarc
lomiri/lomiri-calculator-app/: cmake_args  goarc  used_apis
lomiri/qt5_quickcontrols2_suru/: .gitignore  artifacts  goarc  used_apis
lvgl/: goarc
lvgl/lvgl/: api  artifacts  import  used_apis
lvgl/lvgl_demos/: api  artifacts  cmake_args  goarc
lvgl/lvgl_support/: api  used_apis
lvgl/lvgl_support/src/: CMakeLists.txt  lvgl_support.cc
lvgl/lvgl_support/src/include/: lvgl_support.h
lvgl/music_demo/: artifacts
lvgl/system_info/: goarc  used_apis
lvgl/widgets_demo/: used_apis
meta/: README  goarc  used_apis
meta/goa/: used_apis
meta/goa-pkgs/: README  used_apis
playground/wireguard/: .goarc
ports/: goarc
ports/curl/: api  artifacts  configure_args  import  used_apis  version
ports/lomiri-calculator-app/: artifacts  goarc  import  used_apis
ports/lvgl/: cmake_args  goarc  import
screenshot/: used_apis
sculpt/: .gitignore  .goarc  goarc  index  lvgl  ports
test-vnc_server/: README
unix_shell_sculpt/: version
vm-tc-firefox-av/: LICENSE  artifacts  import  make_args
vm-tc13-firefox-av/: import
vnc_server/: make_args  used_apis  version
zynq/: .goarc  goarc
(+249 files in other folders)
